--- a/config/database.yml
+++ b/config/database.yml
@@ -5,27 +5,27 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
-  database: db/bakpagi_dev
+  database: d7tkahc3obn4in#db/bakpagi_dev
   pool: 5
   timeout: 5000
-  username: postgres
-  password: code*03
+  username: jkytmlaozjharz#postgres
+  password: mHoEWKnFYp0Im2KQSex7DxLZDC#code*03
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: db/bakpagi_test
+  database: d7tkahc3obn4in#db/bakpagi_test
   pool: 5
   timeout: 5000
-  username: postgres
-  password: code*03
+  username: jkytmlaozjharz#postgres
+  password: mHoEWKnFYp0Im2KQSex7DxLZDC#code*03
 
 production:
   adapter: postgresql
-  database: db/bakpagi_prod
+  database: d7tkahc3obn4in#db/bakpagi_prod
   pool: 5
   timeout: 5000
-  username: postgres
-  password: code*03
+  username: jkytmlaozjharz#postgres
+  password: mHoEWKnFYp0Im2KQSex7DxLZDC#code*03
