--- a/config/database.yml
+++ b/config/database.yml
@@ -5,6 +5,7 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
+  encoding: unicode
   database: db/bakpagi_dev
   pool: 5
   timeout: 5000
@@ -16,7 +17,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: db/bakpagi_dev
+  encoding: unicode
+  database: db/bakpagi_test
   pool: 5
   timeout: 5000
   username: postgres#jkytmlaozjharz#postgres
@@ -24,7 +26,8 @@ test:
 
 production:
   adapter: postgresql
-  database: db/bakpagi_dev
+  encoding: unicode
+  database: bakpagi_prod
   pool: 5
   timeout: 5000
   username: postgres
