--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,7 @@ test:
   database: db/bakpagi_test
   pool: 5
   timeout: 5000
-  username: postgres#jkytmlaozjharz#postgres
+  username: postgres
   password: code*03
 
 production:
